change the url of hw3

--- a/uih35441bnvcrt.html
+++ b/uih35441bnvcrt.html
@@ -16,7 +16,7 @@
 <body>
   <table style="width=100%">
   <tr>
-    <td><a href="./hw3/HW3_hoem.html>homework3</a></td>
+    <td><a href="./hw3/HW3_home.html">homework3</a></td>
     <td><a href="https://www.w3schools.com/" target="_blank">homework6</a></td>
   </tr>
   <tr>
