url new browser;

--- a/hw3/HW3_home.html
+++ b/hw3/HW3_home.html
@@ -19,8 +19,8 @@
     <li class="nav_item"><a href="#Indian">Indian</a></li>
     <li class="nav_item"><a href="#Japanese">Japanese</a></li>
     <li class="nav_item"><a href="#Desserts">Desserts</a></li>
-    <li class="nav_item"><a href="index.html">About</a></li>
-    <li class="nav_item"><a href="index.html">Contact</a></li>
+    <li class="nav_item"><a href="index.html" target="_blank">About</a></li>
+    <li class="nav_item"><a href="index.html" target="_blank">Contact</a></li>
   </ul>
 </nav>
 <!-- Top BG  -->
